--- a/style.css
+++ b/style.css
@@ -2,20 +2,25 @@
   box-sizing: border-box;
 }
 
-.mainDiv {
+
+
+main {
   position: relative;
   display: inline-block;
 }
 
-.game-container {
+.topbar-container {
   position: absolute;
   display: flex;
   width: 100%;
   align-items: center;
   padding: 20px;
+
+  font-family: "Russo One", sans-serif;
+  color: orange;
 }
 
-.player-container {
+.healthbar-container {
   position: relative;
   height: 30px;
   width: 100%;
@@ -23,20 +28,21 @@
   justify-content: flex-end;
 }
 
-.player-one-background {
+.healthbar-background {
   border: 5px solid black;
   height: 30px;
   width: 100%;
 }
 
-.player-one-healthbar {
-  position: absolute;
+.healthbar-healthbar {
   background: linear-gradient(360deg, red, yellow);
-  top: 5px;
-  right: 0px;
-  left: 4px;
-  bottom: 5px;
-  width: 99%;
+  width: 100%;
+  height: 100%;
+}
+
+.flex-end {
+  display: flex;
+  justify-content: flex-end;
 }
 
 .timer {
@@ -45,27 +51,9 @@
   border-radius: 20%;
   height: 70px;
   flex-shrink: 0;
+  color: orange;
 }
 
-.player-two-health {
-  position: relative;
-  height: 30px;
-  width: 100%;
-}
-
-.player-two-background {
-  height: 30px;
-  border: 5px solid black;
-}
-
-.player-two-healthbar {
-  position: absolute;
-  background: linear-gradient(360deg, red, yellow);
-  top: 5px;
-  right: 4px;
-  bottom: 5px;
-  left: 0;
-}
 
 .winner-text {
   display: none;
@@ -113,21 +101,23 @@
   transform: translateY(-0.25em);
 }
 
-.name-container {
-  font-family: "Russo One", sans-serif;
-  color: orange;
-  display: flex;
-  justify-content: space-around;
-}
 
-.eskil-healthbar {
+.eskil-name {
   position: absolute;
-  top: 10%;
+  top: 80%;
   left: 2%;
 }
 
-.jonathan-healthbar {
+.jonathan-name {
   position: absolute;
-  top: 10%;
+  top: 80%;
   right: 2%;
 }
+
+.vs {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: orange;
+  font-size: 1.5rem;
+  font-family: "Russo One", sans-serif;}
