--- a/style.css
+++ b/style.css
@@ -1,12 +1,31 @@
 * {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 
+body{
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
+}
 
 
 main {
-  position: relative;
-  display: inline-block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  max-width: 1400px;
+
+}
+
+main canvas {
+  width: 100%;
+  height: 100%;
+
+
 }
 
 .topbar-container {
