--- a/style.css
+++ b/style.css
@@ -9,6 +9,8 @@ body {
   width: 100vw;
   overflow: hidden;
   background-image: url(./img/gradient-background.webp);
+  font-family: "Russo One", sans-serif;
+
 }
 
 main {
@@ -126,8 +128,6 @@ main canvas {
 
 }
 
-
-
 .start-button {
   background-color: #cf245f;
   background: linear-gradient(to bottom right, #fcd34d, #ef4444, #ec4899);
@@ -161,13 +161,77 @@ main canvas {
 
 
 /* WINNER OVERLAY */
-.winner-text {
+.winner-overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0px;
+  left: 0px;
+  z-index: 100;
+
   display: none;
-  font-family: "Russo One", sans-serif;
+  justify-content: center;
+  align-items: center;
+
+  backdrop-filter: sepia(60%);
+
+  z-index: 100;
+}
+
+.winner-container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 46px;
+  background-color: black;
+  border-radius: 7px;
+  border: 10px ridge orange;
+}
+
+.winner-text {
   color: orange;
   font-size: 4rem;
-  position: absolute;
-  top: 40%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+
+}
+
+.winner-button-container{
+  display: flex;
+  gap: 10px;
+  margin-top: 20px;
+
+}
+
+.winner-button-container button{
+
+  border: 2px solid orange;
+  border-radius: 0.45rem;
+  padding: .4rem 1rem;
+
+  background-color: rgb(0, 0, 0);
+  
+
+  color: rgb(255, 166, 0);
+  font-family: ui-sans-serif, system-ui, -apple-system, system-ui, "Segoe UI",
+    Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
+    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    font-family: "Russo One", sans-serif;
+
+  font-size: 1.125rem; /* 18px */
+  font-weight: 200;
+  line-height: 1.75rem; /* 28px */
+  text-align: center;
+
+  cursor: pointer;
+  user-select: none;
+  -webkit-user-select: none;
+
+  transition: transform .3s;
+
+  
+}
+
+.winner-button-container button:hover{
+
+  transform: scale(1.02);
+  
 }
